--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-.mainTable { width: 100%;}
+body {
+  background-color: darkgoldenrod;
+}
+
+/*.mainTable { width: 100%;}*/
 .mainTable td, .mainTable th {
   border: 1px solid black;
   padding: 10px;
