Task 3 - addding a table to 'mainTable__content'

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   padding: 10px;
 }
 
-.mainTable__image{width: 300px;}
+/*.mainTable__image{width: 300px;}*/
 
 .mainTable__header{}
 .mainTable__content{}
